# tick

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  Taskfile.yml  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  release_checklist.yml
.github/workflows/: bump-homebrew-tap.yml  ci.yml  release.yml
Formula/: tick.rb
benches/: pipeline.rs
docs/: CONFIGURATION.md  FEATURES.md  KEYBINDINGS.md  OAUTH.md  README.md  USER_GUIDE.md
docs/architecture/: README.md  plugin-rfc.md  testing.md
docs/features/: README.md  auth-cli-cache.md  automation.md  bulk-actions.md  comments-and-worklogs.md  create-duplicate-templates.md  custom-fields.md  detail-pane.md  editing-fields.md  issue-links-subtasks.md  open-and-multi-site.md  platform.md  plugins.md  quick-search.md  saved-views-templates-columns.md  views-and-tabs.md  (+2 more)
scripts/: release.sh
src/: app.rs  auth.rs  auth_status.rs  batch.rs  bulk.rs  cache.rs  columns.rs  config.rs  config_check.rs  create_flow.rs  editable_fields.rs  fetch_status.rs  global_search.rs  hooks.rs  input.rs  issue_key.rs  issue_relations_flow.rs  lib.rs  main.rs  oauth.rs  platform.rs  template_export.rs  template_export_flow.rs  template_manage_flow.rs  template_persist.rs  theme.rs  ticket_lock.rs  view_mode.rs
themes/: README.md  catppuccin-mocha.toml  default.toml  dracula.toml  gruvbox-dark.toml  light.toml  nord.toml  one-dark.toml  rose-pine.toml  solarized-dark.toml  tokyo-night.toml
(+69 files in other folders)
