[package]
name = "tick"
version = "0.17.0"
edition = "2021"
license = "MIT"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"

[dev-dependencies]
wiremock = "0.6"
insta = { version = "1.42", features = ["redactions"] }
proptest = "1.6"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pipeline"
harness = false
